--- a/accounts.html
+++ b/accounts.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="categories.css">
     <link rel="stylesheet" href="bottom-nav.css">
-    <script type="module" src="../js/users.js" defer></script>
-    <script type="module" src="../js/categories.js" defer></script>
+    <script type="module" src="users.js" defer></script>
+    <script type="module" src="categories.js" defer></script>
 </head>
 <body>
     <header>
