--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Expense Tracker</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5948/5948020.png">
     <script src="https://kit.fontawesome.com/2e4784bf23.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/bottom-nav.css">
-    <script type="module" src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="bottom-nav.css">
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <header>
