--- a/login.html
+++ b/login.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5948/5948020.png">
-    <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../css/bottom-nav.css">
-    <script type="module" src="../js/users.js" defer></script>
-    <script type="module" src="../js/login.js" defer></script>
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="bottom-nav.css">
+    <script type="module" src="users.js" defer></script>
+    <script type="module" src="login.js" defer></script>
 </head>
 <body>
 
