--- a/statistics.html
+++ b/statistics.html
@@ -9,10 +9,10 @@
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5948/5948020.png">
   <script src="https://kit.fontawesome.com/2e4784bf23.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
-  <script type="module" src="../js/statistics.js" defer></script>
-  <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/bottom-nav.css">
-  <script type="module" src="../js/create-new-user.js" defer></script>
+  <script type="module" src="statistics.js" defer></script>
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="bottom-nav.css">
+  <script type="module" src="create-new-user.js" defer></script>
 </head>
 
 <body>
