--- a/transactions.html
+++ b/transactions.html
@@ -7,11 +7,11 @@
     <title>Categories</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5948/5948020.png">
     <script src="https://kit.fontawesome.com/2e4784bf23.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/categories.css">
-    <link rel="stylesheet" href="../css/bottom-nav.css">
-    <script type="module" src="../js/users.js" defer></script>
-    <script type="module" src="../js/categories.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="categories.css">
+    <link rel="stylesheet" href="bottom-nav.css">
+    <script type="module" src="users.js" defer></script>
+    <script type="module" src="categories.js" defer></script>
 </head>
 <body>
     <header>
